@@ -55,10 +55,13 @@ void         empathy_idle_set_state       (EmpathyIdle *idle,
 					   McPresence   state);
 const gchar *empathy_idle_get_status      (EmpathyIdle *idle);
 void         empathy_idle_set_status      (EmpathyIdle *idle,
-					   const gchar *message);
-McPresence   empathy_idle_get_slack_state (EmpathyIdle *idle);
-void         empathy_idle_set_slack_state (EmpathyIdle *idle,
+					   const gchar *status);
+McPresence   empathy_idle_get_flash_state (EmpathyIdle *idle);
+void         empathy_idle_set_flash_state (EmpathyIdle *idle,
 					   McPresence   state);
+void         empathy_idle_set_presence    (EmpathyIdle *idle,
+					   McPresence   state,
+					   const gchar *status);
 
 G_END_DECLS
 
